# parse-js

./: .gitignore  .gitmodules  Cargo.toml  version
bench/minify-js/: Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
examples/: es6-class.md  function.js  let.js
minify-js/: Cargo.toml
minify-js-cli/: Cargo.toml
minify-js-cli/src/: main.rs
minify-js-nodejs/: Cargo.toml
minify-js/src/: lib.rs
minify-js/src/analyze/: mod.rs  tests.rs
minify-js/src/compile/: ssa_rename.rs
minify-js/src/reconstruct/: mod.rs
minify-js/src/serialize/: mod.rs
minify-js/src/serialize/tests/: mod.rs
notes/: AST design rationale.md
optimize-js/: Cargo.toml
optimize-js-cli/: Cargo.toml
optimize-js-cli/src/: main.rs
optimize-js-debugger/: Cargo.toml  package.json  tsconfig.json
optimize-js-debugger/src/: index.css  index.html  index.tsx  lib.rs
optimize-js-debugger/src/component/: App.css  App.tsx
optimize-js/src/: backedge.rs  bblock.rs  cfg.rs  consteval.rs  counter.rs  debug.rs  deconstruct_ssa.rs  defs.rs  domfront.rs  dominators.rs  domtree.rs  dot.rs  find_loops.rs  inst.rs  interference.rs  lib.rs  liveness.rs  optpass_cfg_prune.rs  optpass_dvn.rs  optpass_impossible_branches.rs  optpass_redundant_assigns.rs  optpass_trivial_dce.rs  postorder.rs  register_alloc.rs  single_use_insts.rs  source_to_inst.rs  ssa_insert_phis.rs  ssa_rename.rs  var_visitor.rs  visit.rs
optimize-js/src/analysis/: defs.rs  find_loops.rs  liveness.rs  mod.rs  single_use_insts.rs
optimize-js/src/builtin/: mod.rs
optimize-js/src/cfg/: bblock.rs  cfg.rs  mod.rs
optimize-js/src/dom/: domfront.rs  domtree.rs  mod.rs
optimize-js/src/eval/: builtin.rs  consteval.rs  mod.rs
optimize-js/src/graph/: backedge.rs  graph.rs  mod.rs  postorder.rs
optimize-js/src/il/: inst.rs  mod.rs  source_to_inst.rs
optimize-js/src/opt/: mod.rs  optpass_cfg_prune.rs  optpass_dvn.rs  optpass_impossible_branches.rs  optpass_redundant_assigns.rs  optpass_trivial_dce.rs
optimize-js/src/ssa/: deconstruct_ssa.rs  mod.rs  ssa_insert_phis.rs  ssa_rename.rs
optimize-js/src/symbol/: mod.rs  var_visitor.rs
optimize-js/src/util/: debug.rs  mod.rs
parse-js/: Cargo.toml
parse-js-cli/: Cargo.toml
parse-js-cli/src/: main.rs
parse-js/src/: ast.rs  loc.rs  num.rs  operator.rs  token.rs  visit.rs
parse-js/src/lex/: mod.rs
parse-js/src/parse/: expr.rs  function.rs  literal.rs  operator.rs  pattern.rs  stmt.rs
parse-js/src/parse/tests/expr/arrow_function/: destructuring.js  nested_ternaries_and_assignments.json  simple.json
parse-js/src/parse/tests/expr/call/: coalescing.json  iife.json
parse-js/src/parse/tests/expr/comma/: logical.json  simple.json
parse-js/src/parse/tests/expr/conditional/: simple.json
parse-js/src/parse/tests/expr/import/: meta.json
parse-js/src/parse/tests/expr/jsx/: jsx.js  jsx.json
parse-js/src/parse/tests/expr/literal_regex/: division_operator.json
parse-js/src/parse/tests/expr/new/: simple.json  without_args.json
parse-js/src/parse/tests/stmt/: mod.rs
parse-js/src/parse/tests/stmt/var/: arrow.json  keywords.json
rust/: Cargo.toml
rust/src/: ast.rs  builtin.rs  char.rs  err.rs  error.rs  flag.rs  lib.rs  num.rs  operator.rs  session.rs  source.rs  symbol.rs  tests.rs  token.rs  update.rs  visit.rs
rust/src/compile/: backedge.rs  mod.rs  optpass_cfg_prune.rs  postorder.rs  ssa_insert_phis.rs
rust/src/emit/tests/: mod.rs
rust/src/lex/: mod.rs
rust/src/lex/tests/: mod.rs
rust/src/minify/: mod.rs
rust/src/minify/function/: backedge.rs  bblock.rs  dot.rs  find_loops.rs  mod.rs  reconstruct_source.rs  source_to_inst.rs
rust/src/minify/reconstruct/: mod.rs
rust/src/parse/: class_or_object.rs  decl.rs  expr.rs  function.rs  literal.rs  mod.rs  operator.rs  parser.rs  pattern.rs  signature.rs  stmt.rs  toplevel.rs
rust/src/parse/tests/expr/: mod.rs
rust/src/parse/tests/expr/arrow_function/: destructuring.json  nested_ternaries_and_arrows.json  nested_ternaries_and_assignments.json  simple.json
rust/src/parse/tests/expr/call/: coalescing.js  iife.js  iife.json  simple.json
rust/src/parse/tests/expr/grouping/: comma.json  comma_and_conditionals.json  nested.json
rust/src/parse/tests/expr/identifier/: simple.json
rust/src/parse/tests/expr/import/: meta.json
rust/src/parse/tests/expr/jsx/: jsx.json
rust/src/parse/tests/expr/literal_regex/: division_operator.json
rust/src/parse/tests/expr/new/: with_operators.json
rust/src/parse/tests/expr/tagged_template/: basic.json
rust/src/parse/tests/expr/unary/: complex.json
rust/src/parse/tests/stmt/: mod.rs
rust/src/parse/tests/stmt/var/: arrow.json  complex.json  for_await.js  for_await.json  generator.json  keywords.js  keywords.json  simple.json
rust/src/serialize/: mod.rs
rust/src/serialize/tests/: mod.rs
rust/src/util/: test.rs
src/: ast.rs  error.rs  lib.rs  operator.rs  source.rs  symbol.rs  token.rs  visit.rs  visitor.rs
src/lex/: mod.rs
src/lex/tests/: mod.rs
src/parse/: class_or_object.rs  decl.rs  expr.rs  literal.rs  parser.rs  pattern.rs  stmt.rs
src/parse/tests/expr/: mod.rs
src/parse/tests/expr/arrow_function/: destructuring.json  simple.json
src/parse/tests/expr/call/: coalescing.json
src/parse/tests/expr/import/: meta.js
src/parse/tests/expr/jsx/: jsx.js  jsx.json
src/parse/tests/stmt/: mod.rs
src/parse/tests/stmt/var/: arrow.js  arrow.json  complex.js  complex.json  generator.json
src/serialize/: mod.rs
symbol-js/: Cargo.toml  lib.rs
symbol-js/src/: symbol.rs  visitor.rs
test262/: Cargo.toml
test262/src/: main.rs
