[workspace]
resolver = "2"
members = [
  "bench/minify-js",
  "minify-js-cli",
  "minify-js-nodejs",
  "minify-js",
  "optimize-js-cli",
  "optimize-js-debugger",
  "optimize-js",
  "parse-js-cli",
  "parse-js",
  "symbol-js",
  "test262",
]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true

[profile.release.package."*"]
codegen-units = 1
opt-level = 3

[profile.release-with-debug]
inherits = "release"
debug = true
strip = "none"
