[package]
name = "optimize-js-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
optimize-js = { version = "0.1.0", path = "../optimize-js" }
parse-js = { version = "0.24.1", path = "../parse-js" }
serde_json = "1.0.133"
symbol-js = { version = "0.2.0", path = "../symbol-js" }
