[package]
name = "optimize-js-debugger"
version = "0.1.0"
authors = ["Wilson Lin <code@wilsonl.in>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = "0.3.72"
optimize-js = { version = "0.1.0", path = "../optimize-js" }
parse-js = { version = "0.24.1", path = "../parse-js" }
symbol-js = { version = "0.2.0", path = "../symbol-js" }
serde_json = "1.0.133"
serde-wasm-bindgen = "0.6.5"
getrandom = { version = "0.2.15", features = ["js"] } # For aHash.
serde = { version = "1.0.216", features = ["derive"] }
