[package]
name = "symbol-js"
version = "0.2.0"
edition = "2021"
categories = ["development-tools::build-utils", "web-programming"]
description = "JavaScript symbol library"
keywords = ["javascript", "symbol", "resolver", "js", "ecmascript"]
license = "Apache-2.0"
homepage = "https://github.com/wilsonzlin/symbol-js"
repository = "https://github.com/wilsonzlin/symbol-js"

[dependencies]
ahash = "0.8.7"
parking_lot = "0.12.3"
parse-js = { version = "0.24.1", path = "../parse-js" }
serde = { version = "1.0.216", features = ["derive"] }
